<resources>
    <string name="app_name">base</string>
    <string name="title_activity_mental_login">MentalLoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_agreement">同意吱吱心理<font color="#008599">《用户协议》、《隐私政策》</font></string>
    <string name="user_private">《隐私政策》</string>
    <string name="phone_private">《中国移动认证服务条款》</string>
    <string name="phone_login">手机号登录/注册</string>
    <string name="code_login">密码登录</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="input_pass_hint">请输入密码</string>
    <string name="get_phone_code">获取验证码</string>
    <string name="base_input_phone_code">请输入验证码</string>
    <string name="read_agreement">请阅读并同意《用户协议》、《隐私政策》和《中国移动认证服务条款》</string>
    <string name="onkey_support">中国移动提供认证服务</string>
    <string name="onkey_login">使用本机号码一键登录</string>
    <string name="other_phone_login">其他手机号登录</string>
    <string name="input_correct_phonenum">请输入正确的手机号</string>
    <string name="input_correct_pass">请输入密码</string>
    <string name="has_send_to">已发送至手机</string>
    <string name="login">登录</string>
    <string name="forget_pass">忘记密码</string>
    <string name="home_tab_recommend">推荐</string>
    <string name="home_tab_evaluation">测评</string>
    <string name="home_tab_courses">课程</string>
    <string name="home_tab_service">服务</string>
    <string name="error_message">网络错误,请稍后重试</string>
    <string name="empty_message">暂时还没有数据</string>

    <string name="test1">背景：base_selector_button_dark \n 颜色：base_selector_color_button_white</string>
    <string name="test2">背景：base_selector_checkbox_bg \n 设置button：@null</string>
</resources>