<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="loginClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="otherPoneClick"
            type="android.view.View.OnClickListener" />
        <variable
            name="loginModel"
            type="com.mtjk.bean.LoginModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:scaleType="centerInside"
            android:src="@drawable/login_logo" />

        <TextView
            android:id="@+id/onkeyNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:text="@{loginModel.phoneNumber}"
            android:textColor="#1F2326"
            android:textSize="21dp" />

        <TextView
            android:id="@+id/supportService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/onkey_support"
            android:textColor="#A9ADB2"
            android:textSize="12dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_btn_bg"
            android:clickable="true"
            android:onClick="@{loginClick}"
            android:text="@string/onkey_login"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/toCodeLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:onClick="@{otherPoneClick}"
            android:text="@string/other_phone_login"
            android:textColor="#133C53"
            android:textSize="12dp" />
    </LinearLayout>
</layout>
